# BankLab

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 135bf1bed9c6_cria_tabelas_iniciais.py
apps/api/app/: main.py  models.py  seed.py
apps/api/app/core/: config.py  database.py  errors.py  events.py  security.py
apps/api/app/modules/accounts/: router.py  schemas.py
apps/api/app/modules/audit/: service.py
apps/api/app/modules/auth/: deps.py  router.py  schemas.py
apps/api/app/modules/deposits/: router.py  schemas.py
apps/api/app/modules/notifications/: router.py  schemas.py
apps/api/app/modules/summary/: router.py
apps/api/app/modules/transactions/: router.py  schemas.py
apps/api/app/modules/transfers/: router.py  schemas.py
apps/api/app/workers/: notifications_worker.py
apps/api/tests/: conftest.py  test_accounts.py  test_auth.py  test_deposits.py  test_health.py  test_notifications.py  test_notifications_worker.py  test_security.py  test_summary.py  test_transactions.py  test_transfers.py
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/tests/: app-shell.test.tsx  deposito-form.test.tsx  extrato-page.test.tsx  format.test.ts  inicio-page.test.tsx  login-form.test.tsx  setup.ts  transferencia-form.test.tsx
docs/: PRD.md
infra/docker/: postgres-init.sql
(+25 files in other folders)
